# PrefixGuard

./: .gitignore  DATASETS.md  LICENSE  README.md  REPRODUCIBILITY.md  pyproject.toml
configs/: main_experiments.json
data/toy/: trajectories.jsonl
scripts/: bootstrap_public_data.py  build_skillsbench_clean_monitor.py  create_task_grouped_split.py  evaluate_differentiable_automaton.py  import_skillsbench_traces.py  import_tau2_bench_results.py  import_terminalbench_trajectories.py  import_webarena_execution_traces.py  prepare_source_raw_baseline_datasets.py  reproduce_main_experiments.py  run_differentiable_automaton_sanity.py  summarize_main_experiments.py  train_differentiable_automaton.py  verify_dataset_artifacts.py
src/monitor_symbolization/: __init__.py  __main__.py  cli.py  experiment_paths.py  query.py  runtime_cache.py  scheduler.py
src/monitor_symbolization/baselines/: __init__.py  heuristic.py  supervised_prefix.py
src/monitor_symbolization/data/: __init__.py  adapter_executor.py  adapter_openai.py  adapter_spec.py  io.py  m6_task_adapters.py  native_benchmarks.py  prefixes.py  schema.py  scrambled_index.py  serialization.py  skillsbench_clean_monitor.py  skillsbench_manifest.py  tau2_bench.py  terminalbench.py  visualwebarena.py  webarena_execution.py  webarena_human.py
src/monitor_symbolization/models/: __init__.py  encoders.py  (+4 more)
tests/: test_dfa_backends.py  test_differentiable_automaton_sanity_cli.py  test_legacy_reproduction.py  test_public_differentiable_monitor.py  test_public_main_reproduction.py  test_public_train_eval_scripts.py
(+13 files in other folders)
