[project]
name = "monitor-symbolization"
version = "0.1.0"
description = "Monitor-aware event symbolization experiments for formal monitoring"
authors = [
    { name = "PrefixGuard Authors" }
]
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "aalpy==1.5.2",
    "beautifulsoup4>=4.14.3",
    "einops>=0.8.1",
    "gdown>=5.2.1",
    "huggingface-hub",
    "lxml>=6.0.2",
    "numpy",
    "pyarrow",
    "scikit-learn",
    "torch",
    "tqdm",
    "transformers",
]

[project.scripts]
monitor-symbolization = "monitor_symbolization:main"

[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
